--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="app_name">EmergenciAPPS</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
-    <string name="action_websearch">Web search</string>
+    <string name="action_websearch">Buscar</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
 </resources>
