orientacion vertical y mapas en pdi

--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="guardar">Guardar</string>
     <string name="numeroCabecera">Número</string>
     <string name="direccionCabecera">Dirección</string>
+    <string name="llamarCabecera">Llamar</string>
     
     
 </resources>
