--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -20,17 +20,19 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_websearch">Buscar</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
-    <string name="config">Configuración</string>
+    <string name="favoritos">Números Favoritos</string>
+    <string name="datos">Datos Personales</string>
     <string name="numeroBombero">Número Bombero</string>
     <string name="numeroCarabinero">Número Carabinero</string>
     <string name="numeroHospital">Número Hospital</string>
     <string name="correoFavorito">Correo contacto</string>
     <string name="mensajeAlerta">Mensaje de Alerta</string>
+    <string name="nombreUser">Nombre</string>
+    <string name="fonoUser">Mi Número</string>
     <string name="guardar">Guardar</string>
     <string name="numeroCabecera">Número</string>
     <string name="direccionCabecera">Dirección</string>
     <string name="llamarCabecera">Llamar</string>
     <string name="radioCobertura">Radio Cobertura (km)</string>
-    
-    
+     
 </resources>
