--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="datos">Datos Personales</string>
     <string name="numeroBombero">Número Bombero</string>
     <string name="numeroCarabinero">Número Carabinero</string>
-    <string name="numeroHospital">Número Hospital</string>
+    <string name="numeroHospital">Número Centro Médico</string>
     <string name="correoFavorito">Correo contacto</string>
     <string name="mensajeAlerta">Mensaje de Alerta</string>
     <string name="nombreUser">Nombre</string>
@@ -33,6 +33,6 @@
     <string name="numeroCabecera">Número</string>
     <string name="descripcionCabecera">Descripción</string>   
     <string name="llamarCabecera">Llamar</string>
-    <string name="radioCobertura">Radio Cobertura (km)</string>
+    <string name="radioCobertura">Radio de Búsqueda (km)</string>
      
 </resources>
