--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -22,9 +22,10 @@
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
     <string name="favoritos">Números Favoritos</string>
     <string name="datos">Datos Personales</string>
-    <string name="numeroBombero">Número Bombero</string>
-    <string name="numeroCarabinero">Número Carabinero</string>
-    <string name="numeroHospital">Número Centro Médico</string>
+    <string name="numeroBombero">N° Bombero</string>
+    <string name="numeroPDI">N° PDI</string>
+    <string name="numeroCarabinero">N° Carabinero</string>
+    <string name="numeroHospital">N° Centro Médico</string>
     <string name="correoFavorito">Correo contacto</string>
     <string name="mensajeAlerta">Mensaje de Alerta</string>
     <string name="nombreUser">Nombre</string>
