--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_websearch">Buscar</string>
+    <string name="action_save_conf">Guardar</string>
     <string name="app_not_available">Sorry, there\'s no web browser available</string>
     <string name="favoritos">Números Favoritos</string>
     <string name="datos">Datos Personales</string>
