--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -36,5 +36,12 @@
     <string name="descripcionCabecera">Descripción</string>   
     <string name="llamarCabecera">Llamar</string>
     <string name="radioCobertura">Radio de Búsqueda (km)</string>
+    <string name="nombre">Nombre</string>
+    <string name="telefono">Teléfono</string>
+    <string name="correo">Correo</string>
+    <string name="alertas">Alertas</string>
+    <string name="email">E-mail</string>
+    <string name="sms">SMS</string>
+    <string name="gps">GPS</string>
      
 </resources>
