Se actualiza la lista de contactos al ingresa, actualizar o modificar un contacto

--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="email">E-mail</string>
     <string name="sms">SMS</string>
     <string name="gps">GPS</string>
-     
+    <string name="detalleContacto">Detalle Contacto</string>
+    <string name="misContactos">Mis Contactos</string>
 </resources>
