--- a/emergenciAPPS/res/values/strings.xml
+++ b/emergenciAPPS/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="gps">GPS</string>
     <string name="detalleContacto">Detalle Contacto</string>
     <string name="misContactos">Mis Contactos</string>
+    <string name="seguimiento">Seguimiento</string>
     <string name="enlace"><a href="">Registrate Aquí</a></string>
 </resources>
